--- a/index.html
+++ b/index.html
@@ -2,4 +2,4 @@
 <html lang="en" dir="ltr">
 <head>
 
-	</style><div id="noscript"><div style="width: 100%; max-width: 600px;"><i class="material-icons text-deep-orange" style="font-size: 72px;">error_outline</i><br/><h5>This site requires JavaScript to work properly</h5><br/><p>Install JavaScript or upgrade your browser.</p><br/><a href="https://www.enable-javascript.com/" class="link">Get JavaScript</a></div></div></noscript><script src="app/webpack.380e1bcd6fdfbc9c1b3f.js"></script><script src="app/node.85769d0a84e6e79bdd41.js"></script><script src="app/main.086bd43152178acd0714.js"></script></body></html>
+	</style><div id="noscript"><div style="width: 100%; max-width: 600px;"><i class="material-icons text-deep-orange" style="font-size: 72px;">error_outline</i><br/><h5>This site requires JavaScript to work properly</h5><br/><p>Install JavaScript or upgrade your browser.</p><br/><a href="https://www.enable-javascript.com/" class="link">Get JavaScript</a></div></div></noscript><script src="./webpack.380e1bcd6fdfbc9c1b3f.js"></script><script src="./node.85769d0a84e6e79bdd41.js"></script><script src="./main.086bd43152178acd0714.js"></script></body></html>
