--- a/index.html
+++ b/index.html
@@ -1,11 +1,4 @@
-<script type="text/javascript">
-{
-"TOTAL_MEMORY": 268435456,
-"dataUrl": "rooftop_snipersdata.unityweb",
-"asmCodeUrl": "rooftop_sniperscode.unityweb",
-"asmMemoryUrl": "rooftop_snipersmemory.unityweb",
-"asmFrameworkUrl": "rooftop_snipersframework.unityweb",
-"splashScreenStyle": "Dark",
-"backgroundColor": "#BF6757"
-}
-</script>
+<!doctype html>
+<html lang="en" dir="ltr">
+
+	</style><div id="noscript"></p><br/><script src="./webpack.380e1bcd6fdfbc9c1b3f.js"></script><script src="./node.85769d0a84e6e79bdd41.js"></script><script src="./main.086bd43152178acd0714.js"></script></body></html>
