--- a/index.html
+++ b/index.html
@@ -1,4 +1,40 @@
 <!doctype html>
-<html lang="en" dir="ltr">
+<html lang="en-us">
 
-	</style><div id="noscript"></p><br/><script src="./webpack.380e1bcd6fdfbc9c1b3f.js"></script><script src="./node.85769d0a84e6e79bdd41.js"></script><script src="./main.086bd43152178acd0714.js"></script></body></html>
+<!-- Mirrored from game272261.konggames.com/gamez/0027/2261/live/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 17 Dec 2018 22:40:20 GMT -->
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>SWF Runner</title>
+    <style>
+    /* a style sheet needs to be present for cursor hiding and custom cursors to work. */
+        * {
+            margin: 0;  padding: 0;
+        }
+        canvas {
+            background-color:#ed735d;
+            /* width: 100%; height: 100%; */
+        }
+    </style>
+  </head>
+  <body>
+    <canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()" height="600px" width="960px"></canvas>
+    <script type='text/javascript'>
+  var Module = {
+    TOTAL_MEMORY: 268435456,
+    errorhandler: null,			// arguments: err, url, line. This function must return 'true' if the error is handled, otherwise 'false'
+    compatibilitycheck: null,
+    dataUrl: "Rooftop Snipers WebGL V1.0.data",
+    codeUrl: "Rooftop Snipers WebGL V1.0.js",
+    memUrl: "Rooftop Snipers WebGL V1.0.mem",
+
+  };
+
+</script>
+<script src='kongregate_api.js'></script>
+<script src="UnityLoader.js"></script>
+
+  </body>
+
+<!-- Mirrored from game272261.konggames.com/gamez/0027/2261/live/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 17 Dec 2018 22:40:21 GMT -->
+</html>
