--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>SWF Runner</title>
+    <title>Rooftop Snipers</title>
     <style>
     /* a style sheet needs to be present for cursor hiding and custom cursors to work. */
         * {
@@ -13,7 +13,7 @@
         }
         canvas {
             background-color:#ed735d;
-            /* width: 100%; height: 100%; */
+            /* width: 150%; height: 150%; */
         }
     </style>
   </head>
